# rag_math_project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker_up.txt  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  postcss.config.cjs  tailwind.config.js
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: FeedbackCard.jsx
frontend/src/components/domain/: ContextView.jsx  FeedbackCard.jsx  LearnerIdModal.jsx  QuestionCard.jsx
frontend/src/lib/: api.js  utils.js
scripts/: clean_databases.py  compare_performance.py  debug_latexml.py  update_preamble.py
src/: app.py  config.py  fast_pipeline.py  pipeline.py
src/adaptive_engine/: question_selector.py  srs_scheduler.py
src/api/: fast_api.py  feedback_models.py  main_api.py  models.py
src/data_ingestion/: chunker.py  concept_tagger.py  document_loader.py  latex_parser.py  latex_processor.py  optimized_vector_store_manager.py  pdf_parser.py  vector_store_manager.py
src/evaluation/: answer_evaluator.py
src/generation/: question_generator_rag.py
src/gnn_training/: model.py  train.py
src/interaction/: answer_handler.py
src/learner_model/: knowledge_tracker.py  profile_manager.py
src/retrieval/: hybrid_retriever.py  optimized_retriever.py  retriever.py
src/rl_engine/: __init__.py  agent.py  environment.py  reward_system.py  rl_question_selector.py  session_manager.py  train.py
src/scripts/: setup_fast_system.sh  update_preamble.py
tests/: conftest.py  test_answer_evaluator.py  test_app_mock.py  test_app_pytest.py  test_chunker.py  test_chunker_pytest.py  test_concept_tagger.py  test_concept_tagger_pytest.py  test_document_loader_pytest.py  test_fast_api_pytest.py  test_fast_pipeline_pytest.py  test_knowledge_tracker.py  test_knowledge_tracker_pytest.py  test_latex_parser.py  test_latex_parser_pytest.py  test_latex_processor_pytest.py  test_models_pytest.py  test_pdf_parser.py  test_pdf_parser_pytest.py  test_profile_manager.py  test_profile_manager_pytest.py  test_question_selector.py  test_question_selector_pytest.py  test_retrieval_and_generation.py  test_retrieval_and_generation_pytest.py  test_vector_store_manager.py  test_vector_store_manager_pytest.py
