[project]
name = "rag-math-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "langchain-text-splitters>=0.3.8",
    "latex2sympy2>=1.9.1",
    "lxml>=5.4.0",
    "networkx[default]>=3.4.2",
    "numpy>=2.2.6",
    "pylatexenc>=2.10",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "sympy>=1.14.0",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "uvicorn[standard]>=0.34.2",
    "weaviate-client==3.26.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
