[project]
name = "rag-math-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "asyncio>=3.4.3",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.13",
    "langchain-text-splitters>=0.3.8",
    "latex2sympy2>=1.9.1",
    "lxml>=5.4.0",
    "matplotlib>=3.8.0",
    "networkx[default]>=3.5.0",
    "numpy>=2.3.0",
    "pylatexenc>=2.10",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "seaborn>=0.13.0",
    "sentence-transformers>=4.1.0",
    "sympy>=1.14.0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "uvicorn[standard]>=0.34.3",
    "weaviate-client>=4.15.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "strict"
timeout = 30
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--tb=short", 
    "--disable-warnings",
    "--timeout=30"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning", 
    "ignore::RuntimeWarning"
]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "@abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]